changed the nav bar to swap to the same background as the rest of the header on mobile, fixed height of header when switching from desktop

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -12,6 +12,7 @@ header.navHeader {
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) { header.navHeader
    {
+     height: auto;
      margin-top: 120px;
      width: 100%;
     }
